apps/media/prowlarr/prowlarr-middleware-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prowlarr-headers
  namespace: media
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Prefix: "/prowlarr"
