apps/media/prowlarr/prowlarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: prowlarr
          #          image: lscr.io/linuxserver/prowlarr:latest
          image: lscr.io/linuxserver/prowlarr:2.6.5 # {"$imagepolicy": "flux-system:prowlarr"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9696
              name: http
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
          readinessProbe:
            tcpSocket:
              port: 9696
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 9696
            initialDelaySeconds: 90
            periodSeconds: 30
      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config
